--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,28 +23,28 @@
         android:layout_alignParentRight="true"
         android:text="@string/search"/>
 
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/search_edt"
-        android:layout_alignParentLeft="true">
+    <!--<RadioGroup-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_below="@+id/search_edt"-->
+        <!--android:layout_alignParentLeft="true">-->
 
-        <RadioButton
-            android:id="@+id/radio_artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/radio_artist"
-            android:checked="true"
-            android:onClick="onSearchTypeRadioClicked"/>
+        <!--<RadioButton-->
+            <!--android:id="@+id/radio_artist"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/radio_artist"-->
+            <!--android:checked="true"-->
+            <!--android:onClick="onSearchTypeRadioClicked"/>-->
 
-        <RadioButton
-            android:id="@+id/radio_track"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/radio_track"
-            android:onClick="onSearchTypeRadioClicked"/>
-    </RadioGroup>
+        <!--<RadioButton-->
+            <!--android:id="@+id/radio_track"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/radio_track"-->
+            <!--android:onClick="onSearchTypeRadioClicked"/>-->
+    <!--</RadioGroup>-->
 
     <LinearLayout
         android:layout_width="match_parent"
